--- a/study_9/src/app/exampletable/pages/list/exampletable.component.scss
+++ b/study_9/src/app/exampletable/pages/list/exampletable.component.scss
@@ -6,3 +6,10 @@
   .send-request span {
     margin-left: 8px;
   }
+  .funct{
+    margin: 0 auto;
+    margin-top: 16px;
+  }
+  .funct button{
+    margin-left: 15px;
+  }
