--- a/study_9/src/app/exampletable/pages/list/exampletable.component.html
+++ b/study_9/src/app/exampletable/pages/list/exampletable.component.html
@@ -1,19 +1,37 @@
 <div class="send-request">
-    
     <button nz-button nzType="primary" (click)="_routerAdd()">
         Thêm mới
     </button>
     <button nz-button nzType="primary" [disabled]="setOfCheckedId.size === 0" [nzLoading]="loading"
         (click)="sendRequest()">
-        Send Request
+        Xóa
     </button>
     <span>Delete {{ setOfCheckedId.size }} items</span>
+</div>
+<div class="funct">
+    <button nz-button nzType="primary" (click)="functFirst()">
+        first
+    </button>
+    <button nz-button nzType="primary" (click)="functSkip()">
+        skip
+    </button>
+
+    <button nz-button nzType="primary" (click)="functFilter()">
+        filter
+    </button>
+    <button nz-button nzType="primary" (click)="functTake()">
+        take
+    </button>
+    <button nz-button nzType="primary" (click)="functLast()">
+        last
+    </button>
 </div>
 <nz-table #rowSelectionTable nzShowPagination [nzData]="listOfData"
     (nzCurrentPageDataChange)="onCurrentPageDataChange($event)">
     <thead>
         <tr>
             <th></th>
+            <th>STT</th>
             <th>Tên</th>
             <th>Tuổi</th>
             <th>Giới tính</th>
@@ -22,14 +40,15 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let data of rowSelectionTable.data" (dblclick)="somefunction(data['id'])">
-            <td [nzChecked]="setOfCheckedId.has(data['id'])" 
-                (nzCheckedChange)="onItemChecked(data['id'], $event)"></td>
+        <tr *ngFor="let data of rowSelectionTable.data; let i = index" (dblclick)="somefunction(data['id'])">
+            <td [nzChecked]="setOfCheckedId.has(data['id'])" (nzCheckedChange)="onItemChecked(data['id'], $event)"
+                nzShowCheckbox="false"></td>
+            <td>{{i+1}}</td>
             <td>{{ data['name'] }}</td>
             <td>{{ data['age'] }}</td>
             <td>{{ data['gender']}}</td>
             <td>{{ data['address'] }}</td>
-            <td [nzChecked]="data['disabled']"></td>
+            <td [nzChecked]="data['disabled']" [nzDisabled]="true"></td>
         </tr>
     </tbody>
 </nz-table>
